# fastapi-merch-shop

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: config.py  db.py  main.py
app/models/: item.py  purchase.py  transaction.py  user.py
app/repository/: item.py  transaction.py  user.py
app/routes/: auth.py  transaction.py
app/service/: auth.py  transaction.py
app/utils/: redis.py  security.py  security_utils.py
k8s/: configmap.yaml  deployment.yaml  secrets.yaml  service.yaml
migrations/: env.py
src/: config.py  db.py  main.py
src/models/: item.py  purchase.py  transaction.py  user.py
src/repository/: item.py  transaction.py  user.py
src/routes/: auth.py  transaction.py
src/schemas/: response.py  transaction.py  user.py
src/service/: auth.py  transaction.py
src/utils/: redis.py  security.py
tests/: conftest.py
tests/routes/: test_auth.py  test_transaction.py
